examples/negative/protocols/call_proto_no_impl.kai
# Negative fixture (#520 / protocols): a protocol operation is
# invoked on a type that has no `impl` block. Dispatch must
# reject with "no impl of `P` for type `Box`".

protocol P { foo(x: Self) : Int }

type Box = Box(Int)

fn main() : Int = foo(Box(1))
